--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "enzyme": "1.x.x",
     "eslint": "1.10.x",
     "eslint-plugin-react": "3.15.x",
+    "formsy-material-ui": "^0.3.6",
+    "formsy-react": "^0.17.0",
     "material-ui": "^0.14.3",
     "mocha": "2.x.x",
     "react-addons-test-utils": "^0.14.6",
-    "react-flexbox-grid": "^0.9.4",
     "react-tap-event-plugin": "^0.2.1",
     "sinon": "1.17.x"
   },
