--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "material-ui": "^0.14.3",
     "mocha": "2.x.x",
     "react-addons-test-utils": "^0.14.6",
+    "react-spin": "^0.5.0",
     "react-tap-event-plugin": "^0.2.1",
     "sinon": "1.17.x"
   },
