--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "test-watch": "npm run testonly -- --watch --watch-extensions js,jsx"
   },
   "devDependencies": {
-    "babel-core": "6.x.x",
-    "babel-plugin-react-require": "2.x.x",
-    "babel-polyfill": "6.x.x",
-    "babel-preset-es2015": "6.x.x",
-    "babel-preset-react": "6.x.x",
-    "babel-preset-stage-2": "6.x.x",
-    "babel-root-slash-import": "1.x.x",
-    "chai": "3.x.x",
-    "enzyme": "1.x.x",
-    "eslint": "1.10.x",
-    "eslint-plugin-react": "3.15.x",
+    "babel-core": "^6.4.5",
+    "babel-plugin-react-require": "^2.1.0",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
+    "babel-root-slash-import": "^1.0.0",
+    "chai": "^3.5.0",
+    "enzyme": "^1.5.0",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.15.0",
     "formsy-material-ui": "^0.3.6",
     "formsy-react": "^0.17.0",
-    "material-ui": "^0.14.3",
-    "mocha": "2.x.x",
-    "react-addons-test-utils": "^0.14.6",
+    "material-ui": "^0.14.4",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
     "react-spin": "^0.5.0",
-    "react-tap-event-plugin": "^0.2.1",
-    "sinon": "1.17.x"
+    "react-tap-event-plugin": "^0.2.2",
+    "sinon": "^1.17.3"
   },
   "dependencies": {
     "domready": "^1.0.8",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "mantra-core": "^1.2.0",
     "react-mounter": "^1.0.0"
   },
