--- a/package.json
+++ b/package.json
@@ -30,11 +30,18 @@
     "sinon": "^1.17.3"
   },
   "dependencies": {
+    "babel-core": "^6.7.2",
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "domready": "^1.0.8",
+    "enzyme": "^1.6.0",
+    "formsy-material-ui": "^0.3.8",
+    "mantra-core": "^1.3.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "mantra-core": "^1.2.0",
-    "react-mounter": "^1.0.0"
+    "react-mounter": "^1.1.0"
   },
   "private": true
 }
