--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-plugin-react-require": "^2.1.0",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -27,6 +28,9 @@
     "react-addons-test-utils": "^0.14.7",
     "react-spin": "^0.5.0",
     "react-tap-event-plugin": "^0.2.2",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "redbox-react": "^1.2.2",
     "sinon": "^1.17.3"
   },
   "dependencies": {
