--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "formsy-react": "^0.17.0",
     "material-ui": "^0.14.4",
     "mocha": "^2.4.5",
-    "react-addons-test-utils": "^0.14.7",
+    "react-addons-test-utils": "^0.14.8",
     "react-spin": "^0.5.0",
     "react-tap-event-plugin": "^0.2.2",
     "react-transform-catch-errors": "^1.0.2",
@@ -42,6 +42,7 @@
     "domready": "^1.0.8",
     "enzyme": "^1.6.0",
     "formsy-material-ui": "^0.3.8",
+    "load-script": "^1.0.0",
     "mantra-core": "^1.3.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
