--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "sinon": "^1.17.3"
   },
   "dependencies": {
-    "babel-core": "^6.7.2",
+    "babel-core": "^6.7.5",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
@@ -44,9 +44,10 @@
     "formsy-material-ui": "^0.3.8",
     "load-script": "^1.0.0",
     "mantra-core": "^1.3.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-mounter": "^1.1.0"
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "react-mounter": "^1.1.0",
+    "redbox-react": "^1.2.3"
   },
   "private": true
 }
