--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test-watch": "npm run testonly -- --watch --watch-extensions js,jsx"
   },
   "devDependencies": {
-    "babel-core": "^6.7.4",
+    "babel-core": "^6.7.7",
     "babel-plugin-react-require": "^2.1.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.7.4",
@@ -21,32 +21,34 @@
     "enzyme": "^1.6.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
-    "formsy-material-ui": "^0.3.8",
+    "formsy-material-ui": "^0.3.9",
     "formsy-react": "^0.17.0",
     "material-ui": "^0.14.4",
     "mocha": "^2.4.5",
+    "react": "^0.14.8",
     "react-addons-test-utils": "^0.14.8",
+    "react-dom": "^0.14.8",
     "react-spin": "^0.5.0",
     "react-tap-event-plugin": "^0.2.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.2.2",
+    "redbox-react": "^1.2.3",
     "sinon": "^1.17.3"
   },
   "dependencies": {
-    "babel-core": "^6.7.5",
-    "babel-polyfill": "^6.7.2",
+    "babel-core": "^6.7.7",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "domready": "^1.0.8",
     "enzyme": "^1.6.0",
-    "formsy-material-ui": "^0.3.8",
+    "formsy-material-ui": "^0.3.9",
     "load-script": "^1.0.0",
-    "mantra-core": "^1.3.0",
+    "mantra-core": "^1.5.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
-    "react-mounter": "^1.1.0",
+    "react-mounter": "^1.2.0",
     "redbox-react": "^1.2.3"
   },
   "private": true
