--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "test-watch": "npm run testonly -- --watch --watch-extensions js,jsx"
   },
   "devDependencies": {
-    "babel-core": "^6.7.7",
+    "babel-core": "^6.8.0",
     "babel-plugin-react-require": "^2.1.0",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-polyfill": "^6.7.4",
+    "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^3.16.1",
     "formsy-material-ui": "^0.3.9",
     "formsy-react": "^0.17.0",
+    "lodash": "^4.12.0",
     "material-ui": "^0.14.4",
     "mocha": "^2.4.5",
     "react": "^0.14.8",
@@ -32,8 +33,8 @@
     "react-tap-event-plugin": "^0.2.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.2.3",
-    "sinon": "^1.17.3"
+    "redbox-react": "^1.2.4",
+    "sinon": "^1.17.4"
   },
   "dependencies": {
     "babel-core": "^6.8.0",
@@ -48,7 +49,9 @@
     "mantra-core": "^1.6.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-komposer": "^1.8.0",
     "react-mounter": "^1.2.0",
+    "react-simple-di": "^1.2.0",
     "redbox-react": "^1.2.4"
   },
   "private": true
